~ catalog routes
